--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -55,5 +55,10 @@
     </div> <!-- /container -->
 
     {% include JB/analytics %}
+    
+    <script type="text/javascript">
+	var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+	document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Ff946a54c9f9a32b88a0dde961b476b17' type='text/javascript'%3E%3C/script%3E"));
+	</script>
   </body>
 </html>
