--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -34,6 +34,7 @@
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
+            <li><a href="/WebAppHelper" target="_blank">WebAppHelper</a></li>
           </ul>
         </div>
       </div>
