--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -14,7 +14,7 @@
     <!-- Le styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
-    <link rel="shortcut icon" href="{{ ASSET_PATH }}/i/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
 
     <!-- Le fav and touch icons -->
     <!-- Update these with your own images
