--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -54,6 +54,10 @@
               {% assign pages_list = site.pages %}
               {% assign group = 'navigation' %}
               {% include JB/pages_list %}
+              
+              {% assign pages_list = site.pages %}
+              {% assign group = 'outerlinks' %}
+              {% include JB/pages_list %}
             </ul>
             <ul class="nav pull-right social visible-desktop">
               <li class="divider-vertical"></li>
