--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -51,6 +51,7 @@
 
           <div class="nav-collapse">
             <ul class="nav">
+              <li class="divider-vertical"></li>
               {% assign pages_list = site.pages %}
               {% assign group = 'navigation' %}
               {% include JB/pages_list %}
