--- a/assets/themes/hooligan/css/style.css
+++ b/assets/themes/hooligan/css/style.css
@@ -65,6 +65,12 @@ h1 {
 h2 {
   font-size: 30px;
 }
+h3 {
+  font-size: 24px;
+}
+h4 {
+  font-size: 20px;
+}
 
 /* line 61, ../_sass/_base.scss */
 pre, code {
