--- a/assets/themes/hooligan/css/style.css
+++ b/assets/themes/hooligan/css/style.css
@@ -6,8 +6,7 @@
 /* Override some defaults */
 /* line 13, ../_sass/_base.scss */
 html, body {
-  background-color: #2a2a2a;
-  background: url(../images/bgs/body.png) repeat;
+  background: #2a2a2a url(../images/bgs/body.png) repeat;
 }
 
 /* line 18, ../_sass/_base.scss */
