--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -126,7 +126,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ ASSET_PATH }}/js/jquery.min.js"><\/script>')</script>
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
-    <script src="http://cdn.staticfile.org/prettify/r298/run_prettify.js"></script>
+    <script src="http://cdn.staticfile.org/prettify/r298/run_prettify.js?skin=Sons-Of-Obsidian"></script>
 
     {% include JB/analytics %}
   </body>
