--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -127,7 +127,7 @@
     <script>window.jQuery || document.write('<script src="{{ ASSET_PATH }}/js/jquery.min.js"><\/script>')</script>
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
     
-    <script src="http://cdn.staticfile.org/prettify/r298/run_prettify.js?skin=Sons-Of-Obsidian"></script>
+    <script src="http://cdn.staticfile.org/prettify/r298/run_prettify.js?skin=sons-of-obsidian"></script>
     
 
     {% include JB/analytics %}
