remove web font from skin

--- a/assets/themes/hooligan/css/style.css
+++ b/assets/themes/hooligan/css/style.css
@@ -1,5 +1,7 @@
+/*
 @import url(http://fonts.googleapis.com/css?family=Advent+Pro);
 @import url(http://fonts.googleapis.com/css?family=Oxygen);
+*/
 /* Partials */
 /* Theme Vars */
 /* Compass Vars */
@@ -14,7 +16,7 @@ body {
   color: #bbb;
   text-shadow: 1px 1px 1px #000;
   height: 100%;
-  font-family: 'Oxygen', sans-serif;
+  /*font-family: 'Oxygen', sans-serif;*/
   font-size: 14px;
 }
 
@@ -24,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   color: #D5F5FF;
   text-rendering: optimizelegibility;
-  font-family: 'Advent Pro', sans-serif;
+  /*font-family: 'Advent Pro', sans-serif;*/
   /*font-family: 'Pontano Sans', sans-serif;*/
   font-weight: bold;
   margin-bottom: .4em;
